Начал перенос контента WPDataActivity на compose - продолжение